--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ML the Unspoken: CMSC320 Final Project</title>
+  <title>Learning the Unspoken</title>
   <meta name="description"
     content="We've presented Clarity, a minimalist and elegant website template for AI research.">
   <meta name="referrer" content="no-referrer-when-downgrade">
@@ -206,7 +206,7 @@
 
       <div class="info">
         <div>
-          <a href="https://github.com/visheshnarayan/cmsc320-final" class="button icon"
+          <a href="https://github.com/visheshnarayan/learningtheunspoken" class="button icon"
             style="background-color: rgba(255, 255, 255, 0.25); margin-bottom: 0; font-size: large;"><i
               class="fa-brands fa-github fa-xl"></i>Github<i class="fa-solid fa-code"></i></a>
         </div>
